--- a/model_files/CMSSMSemiAnalyticEFTHiggs/FlexibleSUSY.m.in
+++ b/model_files/CMSSMSemiAnalyticEFTHiggs/FlexibleSUSY.m.in
@@ -100,7 +100,7 @@ InitialGuessAtHighScale = {
 };
 
 (* VEV is the SM-like VEV in the MSSM *)
-SUSYScaleMatching = {
+MatchingScaleInput = {
    {vu, VEV Sin[ArcTan[vu/vd]]},
    {vd, VEV Cos[ArcTan[vu/vd]]}
 };
