--- a/templates/slha_io.cpp.in
+++ b/templates/slha_io.cpp.in
@@ -192,17 +192,17 @@ void @ModelName@_slha_io::set_spinfo(
 {
    std::ostringstream spinfo;
    spinfo << "Block SPINFO\n"
-          << FORMAT_SPINFO(1, PKGNAME)
-          << FORMAT_SPINFO(2, FLEXIBLESUSY_VERSION);
+          << format_spinfo(1, PKGNAME)
+          << format_spinfo(2, FLEXIBLESUSY_VERSION);
 
    for (const auto& s: warnings)
-      spinfo << FORMAT_SPINFO(3, s);
+      spinfo << format_spinfo(3, s);
 
    for (const auto& s: problems)
-      spinfo << FORMAT_SPINFO(4, s);
+      spinfo << format_spinfo(4, s);
 
-   spinfo << FORMAT_SPINFO(5, @ModelName@_info::model_name)
-          << FORMAT_SPINFO(9, SARAH_VERSION);
+   spinfo << format_spinfo(5, @ModelName@_info::model_name)
+          << format_spinfo(9, SARAH_VERSION);
 
    slha_io.set_block(spinfo, SLHA_io::front);
 }
