--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 include(FlexibleSUSYBuildOptions)
 
+find_package(Mathematica 7.0 REQUIRED)
 find_package(Boost 1.37.0 REQUIRED)
 find_package(Eigen3 3.1 REQUIRED NO_MODULE)
 
