Update Mathematica version symbol

--- a/config/config_cmake.h.in
+++ b/config/config_cmake.h.in
@@ -18,7 +18,7 @@
 #define SARAH_MINOR           @SARAH_MINOR@
 #define SARAH_PATCH           @SARAH_PATCH@
 
-#define MATHEMATICA_VERSION   @MATH_VERSION@
+#define MATHEMATICA_VERSION   "@Mathematica_VERSION@"
 
 #define GM2CALC_VERSION       "@GM2CALC_VERSION@"
 #define HIMALAYA_VERSION      "@HIMALAYA_VERSION@"
