--- a/config/config_cmake.h.in
+++ b/config/config_cmake.h.in
@@ -33,9 +33,9 @@
 #define BOOSTTESTLIBS         "@BOOSTTESTLIBS@"
 #define BOOSTTHREADLIBS       "@BOOSTTHREADLIBS@"
 #define CPPFLAGS              "@CPPFLAGS@"
-#define CXX                   "@CXX@"
-#define CXXFLAGS              "@CXXFLAGS@"
-#define EIGENFLAGS            "@EIGENFLAGS@"
+#define CXX                   "@CMAKE_CXX_COMPILER@"
+#define CXXFLAGS              "@CMAKE_CXX_FLAGS@"
+#define EIGENFLAGS            "@EIGEN3_INCLUDE_DIR@"
 #define FC                    "@FC@"
 #define FFLAGS                "@FFLAGS@"
 #define FLIBS                 "@FLIBS@"
@@ -44,7 +44,7 @@
 #define GSLFLAGS              "@GSLFLAGS@"
 #define GSLLIBS               "@GSLLIBS@"
 #define LAPACKLIBS            "@LAPACKLIBS@"
-#define LDFLAGS               "@LDFLAGS@"
+#define LDFLAGS               "@CMAKE_MODULE_LINKER_FLAGS@"
 #define LDLIBS                "@LDLIBS@"
 #define LLFLAGS               "@LLFLAGS@"
 #define LLLIBS                "@LLLIBS@"
