--- a/templates/standard_model_two_scale_low_scale_spectrum_generator.cpp.in
+++ b/templates/standard_model_two_scale_low_scale_spectrum_generator.cpp.in
@@ -33,6 +33,7 @@
 #include "lowe.h"
 #include "numerics2.hpp"
 #include "two_scale_running_precision.hpp"
+#include "two_scale_solver.hpp"
 
 #include <algorithm>
 #include <limits>
