--- a/templates/standard_model_semi_analytic_high_scale_spectrum_generator.cpp.in
+++ b/templates/standard_model_semi_analytic_high_scale_spectrum_generator.cpp.in
@@ -54,7 +54,8 @@ double @ModelName@_spectrum_generator<Semi_analytic>::get_pole_mass_scale(double
 
 double @ModelName@_spectrum_generator<Semi_analytic>::get_eft_pole_mass_scale(double susy_scale, double Mt) const
 {
-   double Q_higgs = settings.get(Spectrum_generator_settings::eft_pole_mass_scale);
+   double Q_higgs = settings.get(
+      Spectrum_generator_settings::eft_pole_mass_scale);
 
    if (Q_higgs == 0.)
       Q_higgs = std::min(susy_scale, Mt);
@@ -230,11 +231,7 @@ void @ModelName@_spectrum_generator<Semi_analytic>::run_except(const softsusy::Q
    reached_precision = std::max(outer_ct.get_current_accuracy(),
                                 eft_ct.get_current_accuracy());
 
-   calculate_spectrum(Mt);
-
-   // copy calculated W pole mass
-   model.get_physical().M@VectorW@
-      = low_scale_constraint.get_sm_parameters().displayPoleMW();
+   calculate_spectrum(Mt, low_scale_constraint.get_sm_parameters().displayPoleMW());
 
    // run to output scale (if scale > 0)
    if (!is_zero(parameter_output_scale)) {
@@ -257,7 +254,7 @@ void @ModelName@_spectrum_generator<Semi_analytic>::write_running_couplings(
       filename, get_low_scale(), get_high_scale());
 }
 
-void @ModelName@_spectrum_generator<Semi_analytic>::calculate_spectrum(double Mt)
+void @ModelName@_spectrum_generator<Semi_analytic>::calculate_spectrum(double Mt, double MW)
 {
    model.run_to(get_pole_mass_scale(susy_scale));
    model.calculate_semi_analytic_solutions(@getBoundaryScale@);
@@ -270,17 +267,6 @@ void @ModelName@_spectrum_generator<Semi_analytic>::calculate_spectrum(double Mt
    const int eft_pole_loops = eft.get_pole_mass_loop_order();
    const int eft_ewsb_loops = eft.get_ewsb_loop_order();
 
-   if (eft_pole_loops > 1) {
-      WARNING("Pole mass loop order " << eft_pole_loops
-              << " in the EFT is currently not supported!  I'm using 1-loop.");
-      eft.set_pole_mass_loop_order(1);
-   }
-   if (eft_ewsb_loops > 1) {
-      WARNING("EWSB loop order " << eft_ewsb_loops
-              << " in the EFT is currently not supported!  I'm using 1-loop.");
-      eft.set_ewsb_loop_order(1);
-   }
-
    eft.calculate_DRbar_masses();
    eft.solve_ewsb();
    eft.calculate_spectrum();
@@ -292,7 +278,7 @@ void @ModelName@_spectrum_generator<Semi_analytic>::calculate_spectrum(double Mt
 
    model.get_physical().M@HiggsBoson_index@ = eft.get_physical().Mhh;
    model.get_physical().M@VectorZ_0@ = eft.get_physical().MVZ;
-   model.get_physical().M@VectorW_0@ = eft.get_physical().MVWp;
+   model.get_physical().M@VectorW_0@ = MW;
 @fillSMFermionPoleMasses@
    if (eft.get_problems().is_running_tachyon(standard_model_info::hh))
       model.get_problems().flag_running_tachyon(@ModelName@_info::@HiggsBoson@);
