--- a/templates/semi_analytic_model.hpp.in
+++ b/templates/semi_analytic_model.hpp.in
@@ -55,12 +55,12 @@ public:
    @ModelName@& operator=(@ModelName@&&) = default;
 
    // interface functions
-   virtual void calculate_spectrum();
-   virtual void clear_problems();
-   virtual std::string name() const;
-   virtual void run_to(double scale, double eps = -1.0);
-   virtual void print(std::ostream& out = std::cerr) const;
-   virtual void set_precision(double);
+   virtual void calculate_spectrum() override;
+   virtual void clear_problems() override;
+   virtual std::string name() const override;
+   virtual void run_to(double scale, double eps = -1.0) override;
+   virtual void print(std::ostream& out = std::cerr) const override;
+   virtual void set_precision(double) override;
 
    /**
     * @brief returns the current values of the semi-analytic coefficients
