--- a/templates/standard_model_semi_analytic_high_scale_initial_guesser.hpp.in
+++ b/templates/standard_model_semi_analytic_high_scale_initial_guesser.hpp.in
@@ -29,7 +29,6 @@
 #include "standard_model_two_scale_low_scale_constraint.hpp"
 #include "initial_guesser.hpp"
 #include "lowe.h"
-#include "single_scale_constraint.hpp"
 
 #include <sstream>
 
@@ -64,7 +63,7 @@ public:
                                @ModelName@_matching_constraint<Semi_analytic>&,
                                @ModelName@_standard_model_matching_up<Semi_analytic>&);
    virtual ~@ModelName@_standard_model_initial_guesser() = default;
-   virtual void guess(); ///< initial guess
+   virtual void guess() override; ///< initial guess
 
    void set_running_precision(double p) { running_precision = p; }
 
