--- a/templates/standard_model_semi_analytic_low_scale_initial_guesser.hpp.in
+++ b/templates/standard_model_semi_analytic_low_scale_initial_guesser.hpp.in
@@ -26,7 +26,6 @@
 #include "standard_model_two_scale_low_scale_constraint.hpp"
 #include "initial_guesser.hpp"
 #include "lowe.h"
-#include "single_scale_constraint.hpp"
 
 #include <sstream>
 
@@ -58,7 +57,7 @@ public:
                                const standard_model::Standard_model_low_scale_constraint<Two_scale>&,
                                @ModelName@_susy_scale_constraint<Semi_analytic>&);
    virtual ~@ModelName@_standard_model_initial_guesser() = default;
-   virtual void guess(); ///< initial guess
+   virtual void guess() override; ///< initial guess
 
    void set_running_precision(double p) { running_precision = p; }
 
