--- a/templates/standard_model_semi_analytic_low_scale_initial_guesser.cpp.in
+++ b/templates/standard_model_semi_analytic_low_scale_initial_guesser.cpp.in
@@ -220,6 +220,8 @@ void @ModelName@_standard_model_initial_guesser<Semi_analytic>::guess_soft_param
    const double susy_scale_guess = susy_constraint.get_initial_scale_guess();
    const double input_scale = @inputScaleGuess@;
 
+   model->run_to(susy_scale_guess, running_precision);
+
    // apply EWSB constraint
    model->calculate_semi_analytic_solutions(input_scale);
    model->solve_ewsb_tree_level();
