--- a/templates/standard_model_two_scale_low_scale_spectrum_generator.cpp.in
+++ b/templates/standard_model_two_scale_low_scale_spectrum_generator.cpp.in
@@ -19,6 +19,7 @@
 // File generated at @DateAndTime@
 
 #include "@ModelName@_two_scale_spectrum_generator.hpp"
+#include "@ModelName@_input_parameters.hpp"
 #include "@ModelName@_two_scale_convergence_tester.hpp"
 #include "@ModelName@_two_scale_ewsb_solver.hpp"
 #include "@ModelName@_two_scale_initial_guesser.hpp"
