--- a/config/config_cmake.h.in
+++ b/config/config_cmake.h.in
@@ -6,55 +6,27 @@
 
 #define PKGNAME "@PROJECT_NAME@"
 
-#define FLEXIBLESUSY_VERSION  "@FlexibleSUSY_VERSION@"
-#define FLEXIBLESUSY_MAJOR    @FlexibleSUSY_VERSION_MAJOR@
-#define FLEXIBLESUSY_MINOR    @FlexibleSUSY_VERSION_MINOR@
-#define FLEXIBLESUSY_PATCH    @FlexibleSUSY_VERSION_PATCH@
-#define FLEXIBLESUSY_EXTRA    @FlexibleSUSY_VERSION_TWEAK@
+#define FLEXIBLESUSY_VERSION  "@PROJECT_VERSION@"
+#define FLEXIBLESUSY_MAJOR    @PROJECT_VERSION_MAJOR@
+#define FLEXIBLESUSY_MINOR    @PROJECT_VERSION_MINOR@
+#define FLEXIBLESUSY_PATCH    @PROJECT_VERSION_PATCH@
+#define FLEXIBLESUSY_EXTRA    @PROJECT_VERSION_TWEAK@
 #define GIT_COMMIT            "@GIT_COMMIT@"
 
+#define BOOST_VERSION         @Boost_VERSION@
+#define EIGEN_VERSION         "@EIGEN3_VERSION@"
+#define GM2CALC_VERSION       "@GM2CALC_VERSION@"
+#define GSL_VERSION           "@GSL_VERSION@"
+#define HIMALAYA_VERSION      "@HIMALAYA_VERSION@"
+#define MATHEMATICA_VERSION   "@Mathematica_VERSION@"
 #define SARAH_VERSION         "@SARAH_VERSION@"
 #define SARAH_MAJOR           @SARAH_MAJOR@
 #define SARAH_MINOR           @SARAH_MINOR@
 #define SARAH_PATCH           @SARAH_PATCH@
 
-#define MATHEMATICA_VERSION   "@Mathematica_VERSION@"
-
-#define GM2CALC_VERSION       "@GM2CALC_VERSION@"
-#define HIMALAYA_VERSION      "@HIMALAYA_VERSION@"
-
 /* System information */
 #define OPERATING_SYSTEM      "@CMAKE_SYSTEM_NAME@"
 #define KERNEL_VERSION        "@CMAKE_SYSTEM_VERSION@"
-
-/* Build variables */
-#define BLASLIBS              "@BLASLIBS@"
-#define BOOSTFLAGS            "@BOOSTFLAGS@"
-#define BOOSTTESTLIBS         "@BOOSTTESTLIBS@"
-#define BOOSTTHREADLIBS       "@BOOSTTHREADLIBS@"
-#define CPPFLAGS              "@CPPFLAGS@"
-#define CXX                   "@CMAKE_CXX_COMPILER@"
-#define CXXFLAGS              "@CMAKE_CXX_FLAGS@"
-#define EIGENFLAGS            "@EIGEN3_INCLUDE_DIR@"
-#define FC                    "@FC@"
-#define FFLAGS                "@FFLAGS@"
-#define FLIBS                 "@FLIBS@"
-#define HIMALAYAFLAGS         "@HIMALAYAFLAGS@"
-#define HIMALAYALIBS          "@HIMALAYALIBS@"
-#define GSLFLAGS              "@GSLFLAGS@"
-#define GSLLIBS               "@GSLLIBS@"
-#define LAPACKLIBS            "@LAPACKLIBS@"
-#define LDFLAGS               "@CMAKE_MODULE_LINKER_FLAGS@"
-#define LDLIBS                "@LDLIBS@"
-#define LLFLAGS               "@LLFLAGS@"
-#define LLLIBS                "@LLLIBS@"
-#define LOOPFUNCFLAGS         "@LOOPFUNCFLAGS@"
-#define LOOPFUNCLIBS          "@LOOPFUNCLIBS@"
-#define SQLITELIBS            "@SQLITELIBS@"
-#define SQLITEFLAGS           "@SQLITEFLAGS@"
-#define THREADLIBS            "@THREADLIBS@"
-#define TSILLIBS              "@TSILLIBS@"
-#define TSILFLAGS             "@TSILFLAGS@"
 
 /* Switches */
 
