--- a/fflite/CMakeLists.txt
+++ b/fflite/CMakeLists.txt
@@ -18,6 +18,6 @@ else()
   add_library(fflite INTERFACE)
 endif()
 
-target_include_directories(fflite PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
+target_include_directories(fflite INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}")
 
 add_library(FlexibleSUSY::fflite ALIAS fflite)
