--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.1)
 
 project(FlexibleSUSY VERSION 2.0.1 LANGUAGES CXX Fortran)
 
@@ -22,8 +22,20 @@ if(ENABLE_COMPILE)
   find_package(Boost 1.37.0 COMPONENTS unit_test_framework REQUIRED)
   find_package(Eigen3 3.1 REQUIRED NO_MODULE)
   find_package(GSL REQUIRED)
+
   if(ENABLE_LAPACK)
     find_package(LAPACK REQUIRED)
+  endif()
+
+  if(ENABLE_THREADS)
+    set(THREADS_PREFER_PTHREAD_FLAG ON)
+    find_package(Threads)
+    if(THREADS_FOUND)
+      message(STATUS "Enabling multi-threading")
+    else()
+      unset(ENABLE_THREADS)
+      message(STATUS "Disabling multi-threading")
+    endif()
   endif()
 endif()
 
