disable LAPACK if not found (LAPACK is optional)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,17 +24,23 @@ if(ENABLE_COMPILE)
   find_package(GSL REQUIRED)
 
   if(ENABLE_LAPACK)
-    find_package(LAPACK REQUIRED)
+    find_package(LAPACK)
+    if(LAPACK_FOUND)
+      message(STATUS "Enabling use of the LAPACK library")
+    else()
+      unset(ENABLE_LAPACK)
+      message(STATUS "Disabling use of the LAPACK library")
+    endif()
   endif()
 
   if(ENABLE_THREADS)
     set(THREADS_PREFER_PTHREAD_FLAG ON)
     find_package(Threads)
     if(THREADS_FOUND)
-      message(STATUS "Enabling multi-threading")
+      message(STATUS "Enabling use of multi-threading")
     else()
       unset(ENABLE_THREADS)
-      message(STATUS "Disabling multi-threading")
+      message(STATUS "Disabling use of multi-threading")
     endif()
   endif()
 endif()
