--- a/templates/module.addon.mk.in
+++ b/templates/module.addon.mk.in
@@ -95,15 +95,11 @@ ifneq (,$(findstring yes,$(ENABLE_LOOPTOOLS)$(ENABLE_FFLITE)))
 $(LIB@ADDON@_DEP) $(EXE@ADDON@_DEP) $(LIB@ADDON@_OBJ) $(EXE@ADDON@_OBJ): CPPFLAGS += $(LOOPFUNCFLAGS)
 endif
 
-ifeq ($(ENABLE_TSIL),yes)
-$(LIB@ADDON@_DEP) $(EXE@ADDON@_DEP) $(LIB@ADDON@_OBJ) $(EXE@ADDON@_OBJ): CPPFLAGS += $(TSILFLAGS)
-endif
-
 $(LIB@ADDON@): $(LIB@ADDON@_OBJ)
 		$(MODULE_MAKE_LIB_CMD) $@ $^
 
 $(EXE@ADDON@_EXE): $(EXE@ADDON@_OBJ) $(LIB@ADDON@) $(LIBFLEXI) $(filter-out -%,$(LOOPFUNCLIBS)) $(HIMALAYALIBS)
-		$(CXX) -o $@ $(call abspathx,$^) $(filter -%,$(LOOPFUNCLIBS)) $(HIMALAYALIBS) $(GSLLIBS) $(BOOSTTHREADLIBS) $(LAPACKLIBS) $(BLASLIBS) $(TSILLIBS) $(FLIBS) $(SQLITELIBS) $(THREADLIBS)
+		$(CXX) -o $@ $(call abspathx,$^) $(filter -%,$(LOOPFUNCLIBS)) $(HIMALAYALIBS) $(GSLLIBS) $(BOOSTTHREADLIBS) $(LAPACKLIBS) $(BLASLIBS) $(FLIBS) $(SQLITELIBS) $(THREADLIBS)
 
 ALLDEP += $(LIB@ADDON@_DEP) $(EXE@ADDON@_DEP)
 ALLSRC += $(LIB@ADDON@_SRC) $(EXE@ADDON@_SRC)
