--- a/addons/GM2Calc/CMakeLists.txt
+++ b/addons/GM2Calc/CMakeLists.txt
@@ -20,9 +20,9 @@ if(ENABLE_GM2Calc)
   target_include_directories(GM2Calc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
   add_library(FlexibleSUSY::GM2Calc ALIAS GM2Calc)
 
-  add_executable(gm2calc.x gm2calc.cpp)
-  target_link_libraries(gm2calc.x GM2Calc)
-  target_include_directories(gm2calc.x PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+  add_executable(gm2calc gm2calc.cpp)
+  target_link_libraries(gm2calc GM2Calc)
+  target_include_directories(gm2calc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 else()
   add_library(GM2Calc INTERFACE)
   add_library(FlexibleSUSY::GM2Calc ALIAS GM2Calc) 
