--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,36 +13,21 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 include(FlexibleSUSYBuildOptions)
+include(FlexibleSUSYOptionalPackages)
 
 if(ENABLE_META)
   find_package(Mathematica 7.0 REQUIRED)
 endif()
 
 if(ENABLE_COMPILE)
+  # required packages
   find_package(Boost 1.37.0 COMPONENTS unit_test_framework REQUIRED)
   find_package(Eigen3 3.1 REQUIRED NO_MODULE)
   find_package(GSL REQUIRED)
-
-  if(ENABLE_LAPACK)
-    find_package(LAPACK)
-    if(LAPACK_FOUND)
-      message(STATUS "Enabling use of the LAPACK library")
-    else()
-      unset(ENABLE_LAPACK)
-      message(STATUS "Disabling use of the LAPACK library")
-    endif()
-  endif()
-
-  if(ENABLE_THREADS)
-    set(THREADS_PREFER_PTHREAD_FLAG ON)
-    find_package(Threads)
-    if(THREADS_FOUND)
-      message(STATUS "Enabling use of multi-threading")
-    else()
-      unset(ENABLE_THREADS)
-      message(STATUS "Disabling use of multi-threading")
-    endif()
-  endif()
+  # optional packages
+  set(THREADS_PREFER_PTHREAD_FLAG ON)
+  find_optional_package(LAPACK ENABLE_LAPACK)
+  find_optional_package(Threads ENABLE_THREADS)
 endif()
 
 if("${CMAKE_EXECUTABLE_SUFFIX}" STREQUAL "")
