--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+include(FlexibleSUSYColors)
 include(FlexibleSUSYBuildOptions)
 include(FlexibleSUSYOptionalPackages)
 
