adding Boost to list of dependencies

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -55,6 +55,7 @@ target_include_directories(flexisusy
 
 target_link_libraries(flexisusy
   PUBLIC
+  Boost::boost
   Eigen3::Eigen
   FlexibleSUSY::config
   FlexibleSUSY::fflite
