--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,10 @@ if("${CMAKE_EXECUTABLE_SUFFIX}" STREQUAL "")
   set(CMAKE_EXECUTABLE_SUFFIX .x)
 endif()
 
+add_subdirectory(meta)
+add_subdirectory(templates)
+add_subdirectory(models)
+
 if(ENABLE_COMPILE)
   add_subdirectory(addons)
   add_subdirectory(config)
